--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "description": "Language support for kb",
     "version": "0.0.1",
     "publisher": "mtots",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/math4tots/kb_vscode"
+    },
     "engines": {
         "vscode": "^1.47.0"
     },
